# MathAPI

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
backend/: main.py
backend/controllers/: auth.py  contribute.py
backend/controllers/api/: examples.py  explination.py  get_topics.py  questions.py
backend/controllers/api/v1/: examples.py  explanation.py  explination.py  formulae.py  get_topics.py  questions.py  topics.py
backend/controllers/auth/: auth.py
backend/controllers/contribute/: example.py  question.py
backend/models/: auth.py  contribute.py  home.py
backend/models/api/: examples.py  explain.py  explination.py  get_topics.py  questions.py  topics.py
backend/models/api/v1/: examples.py  explanation.py  explination.py  formulae.py  get_topics.py  questions.py
backend/models/auth/: auth.py
backend/models/components/: helpers.py  main.py
backend/models/contribute/: example.py  question.py
backend/models/objects/: helpers.py  main.py
backend/routes/: auth.py  contribute.py  home.py
backend/routes/api/: examples.py  explination.py  get_topics.py  questions.py
backend/routes/api/v1/: examples.py  explanation.py  explination.py  formulae.py  get_topics.py  questions.py  topics.py
backend/routes/auth/: auth.py
backend/routes/contribute/: example.py  question.py
backend/utils/: config.py  constants.py  database.py  helpers.py
database/: TOPICS.md  examples.json  explain.json  questions.json  topics.json  topics.txt
