[project]
name = "mathapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "jose>=1.0.0",
    "pwdlib>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pymongo>=4.17.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.49.0",
]
