[project]
name = "mathapi"
version = "0.1.0"
description = "api services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "fastapi-mail>=1.6.4",
    "pwdlib[argon]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.49.0",
]
